--- a/RichEditorView/Assets/editor/style.css
+++ b/RichEditorView/Assets/editor/style.css
@@ -24,6 +24,7 @@ body {
     font-size: 15px;
     min-height: 100%;
     overflow: auto;
+    background-color: #FBFBFB;
 }
 
 body, h1, p {
@@ -56,8 +57,6 @@ div {
     height: 100%;
     overflow: auto;
     display: block;
-    /* font-family: 'HelveticaNeue'; */
     color:#666666;
-    /* font-size: 12pt; */
     font-size: 15px;
 }
