--- a/RichEditorView/Assets/editor/style.css
+++ b/RichEditorView/Assets/editor/style.css
@@ -16,29 +16,41 @@
 
 @charset "UTF-8";
 
-html {
+:root {
+    color-scheme: light dark;
+}
+
+body, html {
     height: 100%;
 }
 
 body {
-    font-size: 15px;
-    min-height: 100%;
     overflow: auto;
     background-color: #FBFBFB;
-}
-
-body, h1, p {
     margin: 0;
+    font: -apple-system-body;
+    font-size: 15px;
 }
 
-div {
-    display: block;
-    position: static;
+@media (prefers-color-scheme: dark) {
+    body, #editor {
+    }
+}
+
+#container {
+    display: table;
+    width: 100%;
+    height: 100%;
 }
 
 #editor {
     -webkit-user-select: auto !important;
     -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
+    overflow: auto;
+    display: table-cell;
+    height: 100%;
+    color: #666666;
+    font-size: 15px;
 }
 
 #editor:focus {
@@ -49,14 +61,14 @@ div {
     content: attr(placeholder);
     position: absolute;
     top: 0px;
-    color: #cccccc;
+    color: #ccc;
 }
 
-#editor {
-    min-height: 100%;
-    height: 100%;
-    overflow: auto;
-    display: block;
-    color:#666666;
-    font-size: 15px;
+h1, p, ul, ol {
+    margin: 0;
+}
+
+a {
+    word-break: break-all;
+    color: -apple-system-blue;
 }
