--- a/RichEditorView/Assets/editor/style.css
+++ b/RichEditorView/Assets/editor/style.css
@@ -16,41 +16,28 @@
 
 @charset "UTF-8";
 
-:root {
-    color-scheme: light dark;
-}
-
-body, html {
+html {
     height: 100%;
 }
 
 body {
-    overflow: auto;
-    background-color: #FBFBFB;
-    margin: 0;
-    font: -apple-system-body;
     font-size: 15px;
+    min-height: 100%;
+    overflow: auto;
 }
 
-@media (prefers-color-scheme: dark) {
-    body, #editor {
-    }
+body, h1, p {
+    margin: 0;
 }
 
-#container {
-    display: table;
-    width: 100%;
-    height: 100%;
+div {
+    display: block;
+    position: static;
 }
 
 #editor {
     -webkit-user-select: auto !important;
     -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
-    overflow: auto;
-    display: table-cell;
-    height: 100%;
-    color: #666666;
-    font-size: 15px;
 }
 
 #editor:focus {
@@ -61,14 +48,16 @@ body {
     content: attr(placeholder);
     position: absolute;
     top: 0px;
-    color: #ccc;
+    color: #cccccc;
 }
 
-h1, p, ul, ol {
-    margin: 0;
-}
-
-a {
-    word-break: break-all;
-    color: -apple-system-blue;
+#editor {
+    min-height: 100%;
+    height: 100%;
+    overflow: auto;
+    display: block;
+    /* font-family: 'HelveticaNeue'; */
+    color:#666666;
+    /* font-size: 12pt; */
+    font-size: 15px;
 }
