--- a/RichEditorView/Assets/editor/style.css
+++ b/RichEditorView/Assets/editor/style.css
@@ -16,14 +16,20 @@
 
 @charset "UTF-8";
 
+:root {
+    color-scheme: light dark;
+}
+
 html {
     height: 100%;
 }
 
 body {
+    font: -apple-system-body;
     font-size: 15px;
     min-height: 100%;
     overflow: auto;
+    background-color: #FBFBFB;
 }
 
 body, h1, p {
@@ -56,8 +62,6 @@ div {
     height: 100%;
     overflow: auto;
     display: block;
-    /* font-family: 'HelveticaNeue'; */
     color:#666666;
-    /* font-size: 12pt; */
     font-size: 15px;
 }
