--- a/RichEditorView/Assets/editor/style.css
+++ b/RichEditorView/Assets/editor/style.css
@@ -29,7 +29,8 @@ body {
     font-size: 15px;
     min-height: 100%;
     overflow: auto;
-    background-color: #FBFBFB;
+    background-color: #F5F7F9;
+    word-break: break-all;
 }
 
 body, h1, p {
@@ -62,6 +63,7 @@ div {
     height: 100%;
     overflow: auto;
     display: block;
-    color:#666666;
+    color: #2f3c4b;
     font-size: 15px;
+    word-break: break-all;   
 }
